--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -1,2 +1,2 @@
 FROM tensorflow/tensorflow:latest-gpu-py3
-RUN pip install tqdm requests fire regex sklearn matplotlib scikit-image keras torch torchvision nltk transformers numpy future Cython tensorboard
+RUN pip install tqdm requests fire regex sklearn matplotlib scikit-image keras torch torchvision nltk transformers numpy future Cython tensorboard seaborn pandas
