--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ GPT-2/models/*
 # Created by https://www.gitignore.io/api/linux,images,pycharm
 # Edit at https://www.gitignore.io/?templates=linux,images,pycharm
 
-
+resources/results
+resources/predictions
 
 ### Images ###
 # JPEG
